--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.Cards {
+  display: flex;
+  justify-content: center;
+  padding: 2px 16px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.Card {
+  width: 100%;
+  height: auto;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  background-color: azure;
+  color: rgb(31, 37, 43);
+  font-weight: bold;
+  margin: 0.25rem;
+}
+
+.Card:hover {
+  box-shadow: 0 10px 18px 0 rgba(0, 0, 0, 0.2);
+}
+.imgClass {
+  height: 300px;
+  width: 300px;
+  object-fit: cover;
+  margin: 10px 10px 10px 10px;
 }
