--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
-/* .App {
-  text-align: center;
-} */
-
 .App-link {
   color: #61dafb;
+}
+
+.App_title{
+  font-family: 'Montserrat', sans-serif;
 }
 
 .container {
@@ -17,6 +17,7 @@
   padding: 10px 5px;
   font-size: medium;
   color: rgb(31, 37, 43);
+  background: #EEEEEE ;
   box-sizing: border-box;
   border: none;
   outline: none;
@@ -28,11 +29,11 @@
   width: 50%;
   height: 10em;
   overflow-y: scroll;
-  background: #ffffff;
+  background: #EEEEEE ;
   box-shadow: 0px 4px 8px #282c34;
 }
 .autocompleteItems {
-  border-bottom: 1px solid rgb(204, 204, 204);
+  border-bottom: 1px solid #EEEEEE;
   padding: 10px 5px;
   cursor: pointer;
   color: rgb(3, 0, 43);
@@ -45,7 +46,7 @@
 .btn {
   padding: 10px 20px;
   border: none;
-  background-color: #ffffff;
+  background-color: #00ADB5;
   margin-bottom: 20px;
   box-shadow: 0px 2px 4px #282c34;
 }
@@ -54,7 +55,9 @@
   box-shadow: 0px 4px 8px #282c34;
 }
 .App-header {
-  background-color: #7e7e7e;
+  background-color: #EEEEEE;
+  font-family: 'Montserrat', sans-serif;
+
   /* ff9292 */
   min-height: 100vh;
   display: flex;
@@ -62,7 +65,8 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #222831;
+  text-shadow: 0px 4px 8px  #fbf5e7;
 }
 .Thumbnail {
   height: 50px;
@@ -73,7 +77,7 @@
 .track_container{
   width: 70%;
   margin-top: 10px;
-  background-color: #5c576386;
+  background-color: #a8b6b6;
   max-height: 75vh;
   min-height: 75vh;
   overflow-y: scroll;
@@ -82,29 +86,36 @@
 }
 .track{
   justify-content: center;
-  border-bottom: 1px solid#b4b3b385;
+  border-bottom: 1px solid#EEEEEE;
   padding: 10px 10px;
   padding-left: 30px;
+  text-shadow: none;
+  font-family: 'Montserrat', sans-serif;
+  font-size:large;
 }
 .track:hover{
   cursor: pointer;
+  box-shadow:  2px 2px 4px #282c34;
+  
 }
 .album_name{
-  color: beige;
+  color: #393E46;
   padding-bottom: 3px;
-  border-bottom: 1px solid beige;
+  border-bottom: 1px solid #393E46;
   width:30%;
   text-align: center;
+  font-family: 'Montserrat', sans-serif;
 }
+
 .title{
-  color: beige;
+  color: #393E46;
   padding: 10px ;
   margin-left: 40px;
   margin-bottom: 10px;
-  border-bottom: 1px solid beige;
-
+  border-bottom: 1px solid #393E46;
   width: 100%;
   text-align: left;
+  font-family: 'Montserrat', sans-serif;
 }
 .artist_info{
 
