--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,7 @@
 }
 .autoItemsName {
   justify-content: center;
+  font-size: large;
 }
 .btn {
   padding: 10px 20px;
@@ -110,10 +111,10 @@
 .title{
   color: #393E46;
   padding: 10px ;
-  margin-left: 40px;
+  margin-left: 20px;
   margin-bottom: 10px;
   border-bottom: 1px solid #393E46;
-  width: 100%;
+  width: 95%;
   text-align: left;
   font-family: 'Montserrat', sans-serif;
 }
