--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,13 @@
+/* @import "https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"; */
+body{
+  margin: 0;
+}
 .App-link {
   color: #61dafb;
 }
 
-.App_title{
-  font-family: 'Montserrat', sans-serif;
+.App_title {
+  font-family: "Montserrat", sans-serif;
 }
 
 .container {
@@ -17,7 +21,7 @@
   padding: 10px 5px;
   font-size: medium;
   color: rgb(31, 37, 43);
-  background: #EEEEEE ;
+  background: #eeeeee;
   box-sizing: border-box;
   border: none;
   outline: none;
@@ -29,11 +33,11 @@
   width: 50%;
   height: 10em;
   overflow-y: scroll;
-  background: #EEEEEE ;
+  background: #eeeeee;
   box-shadow: 0px 4px 8px #282c34;
 }
 .autocompleteItems {
-  border-bottom: 1px solid #EEEEEE;
+  border-bottom: 1px solid #eeeeee;
   padding: 10px 5px;
   cursor: pointer;
   color: rgb(3, 0, 43);
@@ -41,13 +45,21 @@
   vertical-align: middle;
 }
 .autoItemsName {
-  justify-content: center;
+  display: flex;
+  justify-content: space-between;
   font-size: large;
+  align-items: center;
+}
+.autoItemsName-box{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
 }
 .btn {
   padding: 10px 20px;
   border: none;
-  background-color: #00ADB5;
+  background-color: #00adb5;
   margin-bottom: 20px;
   box-shadow: 0px 2px 4px #282c34;
 }
@@ -56,8 +68,8 @@
   box-shadow: 0px 4px 8px #282c34;
 }
 .App-header {
-  background-color: #EEEEEE;
-  font-family: 'Montserrat', sans-serif;
+  background-color: #eeeeee;
+  font-family: "Montserrat", sans-serif;
 
   /* ff9292 */
   min-height: 100vh;
@@ -67,7 +79,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: #222831;
-  text-shadow: 0px 4px 8px  #fbf5e7;
+  text-shadow: 0px 4px 8px #fbf5e7;
 }
 .Thumbnail {
   height: 50px;
@@ -75,62 +87,92 @@
   padding-right: 35px;
   padding-left: 5px;
 }
-.track_container{
+.track_container {
   width: 70%;
   margin-top: 10px;
   background-color: #a8b6b6;
   max-height: 75vh;
   min-height: 75vh;
   overflow-y: scroll;
-  
-
 }
-.track{
-  justify-content: center;
+.track {
+  display: flex;
+  justify-content: space-between;
   border-bottom: 1px solid#EEEEEE;
   padding: 10px 10px;
   padding-left: 30px;
   text-shadow: none;
-  font-family: 'Montserrat', sans-serif;
-  font-size:large;
+  font-family: "Montserrat", sans-serif;
+  font-size: large;
 }
-.track:hover{
+.track:hover {
   cursor: pointer;
-  box-shadow:  2px 2px 4px #282c34;
-  
+  box-shadow: 2px 2px 4px #282c34;
 }
-.album_name{
-  color: #393E46;
+.album_name {
+  color: #393e46;
   padding-bottom: 3px;
-  border-bottom: 1px solid #393E46;
-  width:30%;
+  border-bottom: 1px solid #393e46;
+  width: 30%;
   text-align: center;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
-.title{
-  color: #393E46;
-  padding: 10px ;
+.title {
+  color: #393e46;
+  padding: 10px;
   margin-left: 20px;
   margin-bottom: 10px;
-  border-bottom: 1px solid #393E46;
+  border-bottom: 1px solid #393e46;
   width: 95%;
   text-align: left;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
-.artist_info{
-
+.artist_info {
   text-align: center;
 }
-.artist_img{
+.artist_img {
   height: 150px;
   width: 150px;
   object-fit: cover;
-  margin: 10px 10px 10px ;
+  margin: 10px 10px 10px;
   border-radius: 50%;
   padding: 5px;
 }
-.artist_name{
+.artist_name {
   width: 100%;
   vertical-align: middle;
+}
+.pagination {
+  display: flex;
+  padding-left: 0;
+  list-style: none;
+}
+.page-link {
+  padding: 0.375rem 0.75rem;
+}
+.page-link {
+  position: relative;
+  display: block;
+  color: #393e46;
+  text-decoration: none;
+  background-color: #fff;
+  border: 1px solid #dee2e6;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+.page-link:hover {
+  cursor: pointer;
+}
+.page-item.active .page-link {
+  z-index: 3;
+  color: #fff;
+  background-color: #a8b6b6;
+  border-color: #a8b6b6;
+}
+.page-item.disabled .page-link {
+  z-index: 3;
+  color: #fff;
+  background-color: #c7c7c7;
+  border-color: #555555;
 }
